# stampede

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/: good-first-issues.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DELIVERY-PLAN.md  PRD.md  RESEARCH.md  TEST-PLAN.md
examples/: README.md  echo_server.py  http_openapi.yaml  mcp_stdio.yaml  ollama_live.yaml
src/stampede/: __init__.py  cli.py  config.py  run.py
src/stampede/chaos/: __init__.py  injector.py  recovery.py
src/stampede/goals/: __init__.py  schema.py  synth.py
src/stampede/observer/: __init__.py  badge.py  dashboard.py  diff.py  export.py  live.py  renderer.py  report.py
src/stampede/observer/templates/: report.html.j2
src/stampede/orchestrator/: __init__.py  clock.py  curves.py  engine.py  scheduler.py
src/stampede/personas/: __init__.py  loader.py  schema.py
src/stampede/personas/packs/: core.yaml
src/stampede/population/: __init__.py  agent.py  brain.py  factory.py  grounding.py  providers.py
src/stampede/targets/: __init__.py  base.py  http.py  mcp.py  mock.py  safety.py
src/stampede/trace/: __init__.py  schema.py  store.py  tracer.py
tests/: test_badge.py  test_brain_routing.py  test_diff.py  test_e2e.py  test_grounding.py  test_live_dashboard.py  test_mcp_integration.py  test_ollama_live.py  test_primitives.py  test_render.py  test_units.py
